# classic_bags

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
classic_bags/: __init__.py
include/classic_bags/: bag.hpp
test/: test_basic.cpp  utest.py
