<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>classic_bags</name>
  <version>0.3.0</version>
  <description>A ROS 2 interface in the style of ROS 1 for reading and writing bag files</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_py</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosidl_runtime_py</depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>rosbag2_storage_mcap</test_depend>
  <test_depend>rosbag2_storage_sqlite3</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
